add dynamic data in report